--- a/index.html
+++ b/index.html
@@ -10,13 +10,7 @@
 
 <body>
     <!-- <div class="container">
-        <button class="theme-button ">
-            <i class="icon-d-view"></i>
-            <svg xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 27.7 32"
-                style="enable-background:new 0 0 27.7 32;" xml:space="preserve">
-                <polygon points="0.2,8.1 0.2,23.9 13.9,31.8 27.5,23.9 27.5,8.1 13.9,0.2 " />
-            </svg>
-        </button>
+       
     </div> -->
     <header class="header">
         <div class="main-navbar">
@@ -24,7 +18,7 @@
                 <nav class="navbar navbar-expand-lg">
                       <a class="navbar-brand" href="#"><img src="assets/images/main_logo.svg" alt=""></a>
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                        <span class="icon-arrow "></span>
                       </button>
                       <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -63,7 +57,21 @@
             </div><!-- /.container -->
         </div><!-- /.main-navbar -->
     </header><!-- /.header -->
-    <main class="main-content"></main><!-- /.main-content -->
+    <main class="main-content">
+      <div class="main-hero-section">
+        <video src="assets/videos/main-hero-section.mp4"  autoplay loop muted preload="none"></video>
+        <div class="container container-lg video-caption">
+          <h2><span>AUTOMOBILI LAMBORGHINI</span>MUSEUM</h2>
+          <a href="#" class="theme-button">
+            <i class="icon-arrow"></i>
+            <svg xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 27.7 32"
+                style="enable-background:new 0 0 27.7 32;" xml:space="preserve">
+                <polygon points="0.2,8.1 0.2,23.9 13.9,31.8 27.5,23.9 27.5,8.1 13.9,0.2 " />
+            </svg>
+          </a>
+        </div><!-- /.video-caption -->
+      </div><!-- /.main-hero-section -->
+    </main><!-- /.main-content -->
     <footer class="footer"></footer><!-- /.footer -->
 
     <script src="assets/js/bootstrap.js"></script>
