--- a/index.html
+++ b/index.html
@@ -14,54 +14,56 @@
     </div> -->
     <header class="header">
         <div class="main-navbar">
+          <div class="navbar-wrapper">
             <div class="container container-lg">
                 <nav class="navbar navbar-expand-lg">
-                      <a class="navbar-brand" href="#"><img src="assets/images/main_logo.svg" alt=""></a>
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="icon-arrow "></span>
-                      </button>
-                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                          <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Models</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Beyond</a>
-                          </li> 
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Ownership</a>
-                          </li> 
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Motorsport</a>
-                          </li> 
-                        </ul>
-                        <ul class="right-links navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" href="">Dealerships</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="">Museum</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="">Store</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href=""><i class="icon-ask-me"></i></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href=""><i class="icon-search"></i></a>
-                            </li>
-                        </ul>
-                      </div>
-                  </nav>
+                  <a class="navbar-brand" href="#"><img src="assets/images/main_logo.svg" alt=""></a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="icon-navbar-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Models</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Beyond</a>
+                      </li> 
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Ownership</a>
+                      </li> 
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Motorsport</a>
+                      </li> 
+                    </ul>
+                    <ul class="right-links navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Dealerships</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Museum</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Store</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href=""><i class="icon-ask-me"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href=""><i class="icon-search"></i></a>
+                        </li>
+                    </ul>
+                  </div>
+              </nav>
             </div><!-- /.container -->
+          </div><!-- /.navbar-wrapper -->
         </div><!-- /.main-navbar -->
     </header><!-- /.header -->
     <main class="main-content">
       <div class="main-hero-section">
         <video src="assets/videos/main-hero-section.mp4"  autoplay loop muted preload="none"></video>
-        <div class="container container-lg video-caption">
-          <h2><span>AUTOMOBILI LAMBORGHINI</span>MUSEUM</h2>
+        <div class="container container-md video-caption">
+          <h2><span>HURACAN STERRATO</span>BEYOND THE <br>CONCRETE</h2>
           <a href="#" class="theme-button">
             <i class="icon-arrow"></i>
             <svg xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 27.7 32"
@@ -70,7 +72,31 @@
             </svg>
           </a>
         </div><!-- /.video-caption -->
+        <div class="container container-md car-specs">
+          <ul class="d-flex">
+            <li><b>POWER (CV) / POWER (KW)</b><small>610 CV / 449 kW</small></li>
+            <li><b>MAX. SPEED</b><small>260 km/h</small></li>
+            <li><b>0-100 km/h</b><small>3.4 s</small></li>
+          </ul>
+        </div><!-- /.car-specs -->
       </div><!-- /.main-hero-section -->
+      <section class="augmented-reality">
+        <div class="row">
+          <div class="col-lg-8">
+            <div class="col-inner">
+              <figure>
+                <img src="assets/images/img.jpg" alt="">
+              </figure>
+              <img class="lambo" src="assets/images/lambo.png" alt="">
+            </div><!-- /.col-inner -->
+          </div><!-- /.col-lg-8 -->
+          <div class="col-lg-3">
+            <div class="col-inner">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi consequatur quaerat ipsam nostrum nihil at et, suscipit ab culpa vero quos earum doloribus dolor explicabo cupiditate provident dolore laborum quam.</p>
+            </div><!-- /.col-inner -->
+          </div><!-- /.col-lg-3 -->
+        </div><!-- /.row -->
+      </section><!-- /.augmented-reality -->
     </main><!-- /.main-content -->
     <footer class="footer"></footer><!-- /.footer -->
 
