--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Models</a>
+                        <a class="nav-link active navbar-link" aria-current="page" href="#">Models</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Beyond</a>
+                        <a class="nav-link navbar-link" href="#">Beyond</a>
                       </li> 
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Ownership</a>
+                        <a class="nav-link navbar-link" href="#">Ownership</a>
                       </li> 
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Motorsport</a>
+                        <a class="nav-link navbar-link" href="#">Motorsport</a>
                       </li> 
                     </ul>
                     <ul class="right-links navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="">Dealerships</a>
+                            <a class="nav-link navbar-link" href="">Dealerships</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">Museum</a>
+                            <a class="nav-link navbar-link" href="">Museum</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">Store</a>
+                            <a class="nav-link navbar-link" href="">Store</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href=""><i class="icon-ask-me"></i></a>
@@ -62,8 +62,9 @@
     <main class="main-content">
       <div class="main-hero-section">
         <video src="assets/videos/main-hero-section.mp4"  autoplay loop muted preload="none"></video>
-        <div class="container container-md video-caption">
-          <h2><span>HURACAN STERRATO</span>BEYOND THE <br>CONCRETE</h2>
+        <div class="video-caption hero-caption-space">
+          <div class="container container-md">
+            <h2><span>HURACAN STERRATO</span>BEYOND THE <br>CONCRETE</h2>
           <a href="#" class="theme-button">
             <i class="icon-arrow"></i>
             <svg xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 27.7 32"
@@ -71,32 +72,31 @@
                 <polygon points="0.2,8.1 0.2,23.9 13.9,31.8 27.5,23.9 27.5,8.1 13.9,0.2 " />
             </svg>
           </a>
+          </div>
         </div><!-- /.video-caption -->
-        <div class="container container-md car-specs">
-          <ul class="d-flex">
-            <li><b>POWER (CV) / POWER (KW)</b><small>610 CV / 449 kW</small></li>
-            <li><b>MAX. SPEED</b><small>260 km/h</small></li>
-            <li><b>0-100 km/h</b><small>3.4 s</small></li>
-          </ul>
+        <div class="car-specs">
+          <div class="container  container-md ">
+            <ul class="d-flex">
+              <li><b>POWER (CV) / POWER (KW)</b><small>610 CV / 449 kW</small></li>
+              <li><b>MAX. SPEED</b><small>260 km/h</small></li>
+              <li><b>0-100 km/h</b><small>3.4 s</small></li>
+            </ul>
+          </div>
         </div><!-- /.car-specs -->
       </div><!-- /.main-hero-section -->
       <section class="augmented-reality">
-        <div class="row">
-          <div class="col-lg-8">
-            <div class="col-inner">
-              <figure>
-                <img src="assets/images/img.jpg" alt="">
-              </figure>
-              <img class="lambo" src="assets/images/lambo.png" alt="">
-            </div><!-- /.col-inner -->
-          </div><!-- /.col-lg-8 -->
-          <div class="col-lg-3">
-            <div class="col-inner">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi consequatur quaerat ipsam nostrum nihil at et, suscipit ab culpa vero quos earum doloribus dolor explicabo cupiditate provident dolore laborum quam.</p>
-              <a href="" class="hello">hello</a>
-            </div><!-- /.col-inner -->
-          </div><!-- /.col-lg-3 -->
-        </div><!-- /.row -->
+        <div class="augmented-wrapper d_flex">
+          <div class="augmented-image">
+            <figure>
+              <img src="assets/images/img.jpg" class="main" alt="">
+            </figure>
+            <img  src="assets/images/lambo.png" class="lambo" alt="">
+          </div><!-- /.augmented-image -->
+          <div class="augmented-caption">
+            <h3>AUGMENTED REALITY</h3>
+            <p>Frame the QR code with your smartphone and turn on the Lamborghini Augmented Reality experience.</p>
+          </div><!-- /.augmented-caption -->
+        </div><!-- /.augmented-wrapper -->
       </section><!-- /.augmented-reality -->
     </main><!-- /.main-content -->
     <footer class="footer"></footer><!-- /.footer -->
