--- a/index.html
+++ b/index.html
@@ -88,24 +88,31 @@
         </div><!-- /.car-specs -->
       </div><!-- /.main-hero-section -->
       <section class="augmented-reality section-space-md">
-          <div class="augmented-reality-wrapper">
-            <div class="augmented-image ">
-              <figure>
-                <img src="assets/images/img.jpg" class="main" alt="">
-                <img  class="lambo" src="assets/images/lambo.png" class="lambo" alt="">
-              </figure>
-            </div><!-- /.augmented-image -->
-            <div class="augmented-caption">
-                <h2 class="pb-4"><b>AUGMENTED REALITY</b></h2>
-                <p class="pb-5">Frame the QR code with your smartphone and turn on the Lamborghini Augmented Reality experience.</p>
-                <img class="qr-png" src="assets/images/qr-png.png" alt="">
-            </div><!-- /.augmented-caption -->     
-          </div><!-- /.augmented-reality-wrapper -->
+          <div class="partial-container-right n_m">
+            <div class="row">
+              <div class="col-lg-8">
+                <div class="augmented-image col-inner">
+                  <figure>
+                    <img src="assets/images/img.jpg" class="main" alt="">
+                    <img  class="lambo" src="assets/images/lambo.png" class="lambo" alt="">
+                  </figure>
+                </div><!-- /.augmented-image -->
+              </div><!-- /.col-lg-8 --> 
+              <div class="col-lg-4">
+                <div class="augmented-caption col-inner">
+                  <h2 class="pb-4"><b>AUGMENTED REALITY</b></h2>
+                  <p class="pb-5">Frame the QR code with your smartphone and turn on the Lamborghini Augmented Reality experience.</p>
+                  <img class="qr-png" src="assets/images/qr-png.png" alt="">
+              </div><!-- /.augmented-caption -->     
+              </div><!-- /.col-lg-4 --> 
+            </div><!-- /.row -->
+          </div><!-- /.partial-container-right -->
       </section><!-- /.augmented-reality -->
-      <section class="main-video-section">
+      <section class="main-video-section section-space-md">
         <div class="main-video-section-wrapper">
           <div class="video-inner" >
-          <div class="container">
+          <div class="container" >
+
               <video class="main-video" id="main_video" src="assets/videos/main-hero-section.mp4"  poster="assets/images/poster.jpg" preload="none" type="video/mp4"></video>
               <button id="play_btn" class="theme-button play-button">
                 <i id="play_icon" class="icon-play"></i>
@@ -118,9 +125,28 @@
         </div><!-- /.video-inner -->
         </div><!-- /.main-video-section-wrapper -->
       </section><!-- /.main-video-section -->
+      <section class="overview">
+        <div class="partial-container-right">
+          <div class="row">
+            <div class="col-lg-8">
+              <div class="overview-image col-inner">
+                <figure>
+                  <img src="assets/images/asd.jpg" alt="">
+                </figure>
+              </div><!-- /.overview image -->
+            </div><!-- /.col-lg-8 -->
+            <div class="col-lg-4">
+              <div class="overview-cap col-inner">
+                <h3 class="pb-3"><b>OVERVIEW</b></h3>
+                <p  class="pb-2 para">The first of its kind, the Huracán Sterrato explores a new frontier in driving pleasure, designed to push the envelope when the asphalt ends. The super sports car is equipped with a dedicated iteration of the LDVI (Lamborghini Integrated Vehicle Dynamics) system, featuring specific Strada and Sport calibrations and introducing Rally mode. Like a work of art, it represents the leading edge of innovation: the super sports car concept imagined in a radically new way.</p>
+                <p><small>Availability of Lamborghini models may vary depending on the country. For more information, contact your local Authorized Lamborghini Dealer.</small></p>
+              </div><!-- /.overview-cap -->
+            </div><!-- /.col-lg-4 -->
+          </div><!-- /.row -->
+        </div><!-- /.partial-container-right -->
+      </section><!-- /.overview-image -->
     </main><!-- /.main-content -->
     <footer class="footer"></footer><!-- /.footer -->
-
     <script src="assets/js/bootstrap.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
